Version 0.1.1 - corrected alignment for close button on tabs

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -19,8 +19,7 @@ atom-text-editor::shadow,
   }
 
   .bracket-matcher .region {
-    border: 1px solid @text-color-info;
-    border-radius: 2px;
+    border-bottom: 2px solid @text-color-info;
     box-sizing: border-box;
     background-color: fade(@background-color-info, 32%);
   }
