--- a/styles/tabs.less
+++ b/styles/tabs.less
@@ -135,7 +135,7 @@
   }
 
   .tab .close-icon {
-    top: 9px;
+    top: 6px;
     height: 18px;
     width: 18px;
     right: 4px;
